--- a/style/character_m.css
+++ b/style/character_m.css
@@ -137,11 +137,12 @@
     text-align: justify;
 }
 #character-FB img{
-    max-height: 65vh;
-    max-width: 20vw;
+   
 }
 #character-FB{
-    display:none
+ display: none;
+  padding-top: 50px;  
+  text-align: center;
 }
 #prog-min-hp,
 #prog-min-att,
